# synapse

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/engine/: CMakeLists.txt  README.md
app/engine/src/: Application.cpp  Application.h  HumanUI.cpp  HumanUI.h  IUserInterface.h  JsonUI.cpp  JsonUI.h  NlohmannEnum.h  main.cpp
app/msg-server/: CMakeLists.txt  README.md
app/msg-server/src/: Application.cpp  Application.h  HumanUI.cpp  HumanUI.h  IUserInterface.h  JsonUI.cpp  JsonUI.h  Server.cpp  Server.h  main.cpp
data/: my-config copy.json  my-config.json  nmea-log-short.txt  nmea-log.txt
framework/: CMakeLists.txt
framework/include/synapse/framework/: BaseBlock.h  Demangle.h  Dispatcher.h  Fiber.h  IBlock.h  IConsumer.h  IManager.h  IPort.h  IProducer.h  IRunnable.h  Manager.h  Message.h  Port.h  Registry.h  Route.h  Sink.h  Source.h  VersionInfo.h
framework/src/: BaseBlock.cpp  Dispatcher.cpp  Fiber.cpp  Manager.cpp  Message.cpp  Port.cpp  Registry.cpp  Route.cpp  Sink.cpp  Source.cpp  VersionInfo.cpp.in
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/src/: module.cpp
modules/io/: CMakeLists.txt
modules/io/src/: ConsoleLoggerSink.cpp  ConsoleLoggerSink.h  FileLoggerSink.cpp  FileLoggerSink.h  FramerFiber.cpp  FramerFiber.h  SerialSource.cpp  SerialSource.h  TcpClientSource.cpp  TcpClientSource.h  TcpServerSink.cpp  TcpServerSink.h  main.cpp  module.cpp
modules/marine/: CMakeLists.txt
modules/marine/src/: Nmea0183FramerFiber.cpp  Nmea0183FramerFiber.h  Nmea0183RouterFiber.cpp  Nmea0183RouterFiber.h  module.cpp
tests/modules/marine/: CMakeLists.txt
tests/modules/marine/src/: Nmea0183FramerFiberTest.cpp  Nmea0183RouterFiberTest.cpp
tools/: BasicServer.py
